kubernetes/apps/router-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-dashboard
  namespace: router-dashboard
spec:
  selector:
    app: router-dashboard
  ports:
    - name: frontend
      port: 80
      targetPort: 80
    - name: backend
      port: 4000
      targetPort: 4000
